--- a/dml-server.cabal
+++ b/dml-server.cabal
@@ -20,6 +20,6 @@ executable dml-server
   main-is:             Main.hs
   other-modules:       DML.Types
   -- other-extensions:    
-  build-depends:       base >=4.5 && <4.6, random-source, random-fu, random-extras, random, transformers, MonadRandom, mtl, data-default
+  build-depends:       base >=4.5 && <4.6, random-source, random-fu, random-extras, random, transformers, MonadRandom, mtl, data-default, lens
   hs-source-dirs:      src
   default-language:    Haskell2010
