--- a/dml-server.cabal
+++ b/dml-server.cabal
@@ -23,3 +23,10 @@ executable dml-server
   build-depends:       base >=4.5 && <4.6, random-source, random-fu, random-extras, random, transformers, MonadRandom, mtl, data-default, lens
   hs-source-dirs:      src
   default-language:    Haskell2010
+
+test-suite tests
+  type: exitcode-stdio-1.0
+  hs-source-dirs: test, src
+  main-is: Test.hs
+  build-depends: base, QuickCheck, random-source, random-fu, random-extras, random, lens, data-default, transformers, mtl, MonadRandom
+  other-modules: DML.Types
